--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@techstark/opencv-js": "^4.9.0-release.3",
+    "axios": "^1.6.8",
     "jimp": "^0.22.12",
     "mineflayer": "^4.20.0",
     "mineflayer-item-map-downloader": "^1.2.0",
